<resources>
    <string name="app_name">4 pics 1 word</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="share">Share</string>
    <string name="level">Level</string>
    <string name="team_name">by Ajal studio</string>
    <string name="resume">Resume</string>
    <string name="new_game">new game</string>
    <string name="username">username</string>
    <string name="submit">Submit</string>
    <string name="dialog">Dialog</string>
    <string name="enter_username_or_name">Enter UserName or Name</string>
    <string name="dismiss">dismiss</string>
    <string name="mute_unmute">MUSIC</string>
    <string name="night_mode">NIGHT MODE</string>
    <string name="_0">0</string>
    <string name="help">help</string>
    <string name="clean">clean</string>
    <string name="a">A</string>
    <string name="_1">1</string>
    <string name="exit">exit</string>
    <string name="unmute_mute">UNMUTE/MUTE</string>
    <string name="go_to_menu">GO TO MENU</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="e_a_s_y">E A S Y</string>
    <string name="m_e_d_i_u_m">M E D I U M</string>
    <string name="h_a_r_d">H A R D</string>
    <string name="ok">OK</string>
</resources>