<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_views"
    tools:context=".menu.SettingsActivity">
    <androidx.appcompat.widget.AppCompatImageButton
        android:background="#00433131"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/settings_to_menu"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        tools:ignore="MissingConstraints" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/difficulty"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#00FF55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/checkbox_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_a_s_y"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginVertical="5dp"
                />
            <CheckBox
                android:id="@+id/checkbox_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_e_d_i_u_m"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginVertical="5dp"
                />
            <CheckBox
                android:id="@+id/checkbox_hard"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_a_r_d"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eng"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/flag_eng"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/uzb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/flag_uz"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ru"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/flag_ru"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/checkbox_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:layout_marginHorizontal="75dp"
                android:id="@+id/checkbox_uzb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/checkbox_rus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:minWidth="90dp"
        android:minHeight="52dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/volume_set"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"                                          
        android:src="@drawable/ic_baseline_volume_up_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
                                                  
        />
</androidx.constraintlayout.widget.ConstraintLayout>
